feat: implementing Rabbit integration